syntax = "proto3";

import "ocpirpc/businessdetail.proto";

package crediential;

option go_package = "github.com/satimoto/go-ocpi/ocpirpc";

service CredentialService {
  rpc CreateCredential(CreateCredentialRequest)
      returns (CreateCredentialResponse);
  rpc RegisterCredential(RegisterCredentialRequest)
      returns (RegisterCredentialResponse);
  rpc SyncCredential(SyncCredentialRequest)
      returns (SyncCredentialResponse);
  rpc UnregisterCredential(UnregisterCredentialRequest)
      returns (UnregisterCredentialResponse);
};

message CreateCredentialRequest {
  string client_token = 1;
  string url = 2;
  businessdetail.CreateBusinessDetailRequest business_detail = 3;
  string country_code = 4;
  string party_id = 5;
  bool is_hub = 6;
};

message CreateCredentialResponse {
  int64 id = 1;
  string client_token = 2;
  string url = 3;
  businessdetail.BusinessDetailResponse business_detail = 4;
  string country_code = 5;
  string party_id = 6;
  bool is_hub = 7;
};

message RegisterCredentialRequest {
  int64 id = 1;
  string client_token = 2;
};

message RegisterCredentialResponse { int64 id = 1; };

message SyncCredentialRequest {
  int64 id = 1;
  string from_date = 2;
  string country_code = 3;
  string party_id = 4;
};

message SyncCredentialResponse { int64 id = 1; };

message UnregisterCredentialRequest { int64 id = 1; };

message UnregisterCredentialResponse { int64 id = 1; };